--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -5,6 +5,7 @@
   margin-top: 45px;
   background: $color-primary-alt;
   color: $color-white;
+  z-index: 9;
 
   @media (max-width: 989px) {
     padding-top: 40px;
